<resources>
    <string name="app_name">My Movies</string>
    <string name="title">Movie Title</string>
    <string name="title_input">Enter movie title here</string>
    <string name="genre">Genre</string>
    <string name="genre_input">Enter genre here</string>
    <string name="year">Year</string>
    <string name="year_input">Enter year here</string>
    <string name="rating">Rating</string>
    <string name="insert">insert</string>
    <string name="show_list">show list</string>
    <string name="pg_13_movies">show all pg-13 movies</string>

    <string-array name="movieRatings">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>

